<resources>
    <string name="login_"></string>
    <string name="login_app_name">LoginComponent</string>
    <string name="login_reset_password">重设密码</string>
    <string name="login_set_password">设置密码</string>
    <string name="login_password_set_hint">请设置6～18位新密码</string>
    <string name="login_confirm">确定</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_register_phone">注册手机号</string>
    <string name="login_register_phone_input_hint">请输入你注册使用的手机号</string>
    <string name="login_get_verify_code">获取验证码</string>
    <string name="login_verify_phone">验证手机</string>
    <string name="login_verify_phone_hint">短信验证码即将发送到手机</string>
    <string name="login_send_again">重新发送</string>
    <string name="login_set_password_hint">设置之后你可以使用手机号登录</string>

    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_phone_number">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_forgot_password_mark">忘记密码？</string>
    <string name="login_message_login">短信登录</string>
    <string name="login_password_login">密码登录</string>
    <string name="login_third_party_login">第三方登录</string>
    <string name="login_phone_input_hint">请输入11位手机号</string>
    <string name="login_verify_code">验证码</string>
    <string name="login_verify_code_input_hint">请输入获取的验证码</string>
    <string name="login_go_to_register">去注册</string>
    <string name="login_go_to_login">去登录</string>
    <string name="login_password_input_hint">请输入你的密码</string>
    <string name="login_phone_input_illegal">请输入正确的手机号</string>
    <string name="login_password_input_illegal">请按规则输入正确的密码</string>
    <string name="login_verify_code_input_illegal">请输入正确的验证码</string>
    <string name="login_register_hint">点击注册即表示同意</string>
    <string name="login_wang_wang_user_protocol">《往往用户协议》</string>
    
    <string name="login_what_are_you_interested_in">你对什么感兴趣？</string>
    <string name="login_tag_selection_title_hint">选择喜欢的标签，让往往更懂你</string>
    <string name="login_selected_count">已选</string>
    <string name="login_selected">选定</string>
    <string name="login_tag_confirm_title">兴趣大杂烩</string>
    <string name="login_tag_confirm_title_hint">你的兴趣全在这里，返回可以重新选择哦</string>

    <string name="login_bind_phone">绑定手机</string>
    <string name="login_rebind_phone">换绑手机</string>
    <string name="login_rebind_phone_success">换绑成功</string>
    <string name="login_bind">绑定</string>
    <string name="login_reset_success">重置成功</string>
    <string name="login_set_success">设置成功</string>
    <string name="login_user_cancel">用户取消</string>

</resources>
