<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.frame.component.view.SocialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:toolbar_left_icon="@drawable/common_ic_back"/>

    <LinearLayout
        android:id="@+id/content_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textColor="#ff333333"
            android:textSize="29sp"
            android:layout_marginTop="100dp"/>

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_phone"
                android:textColor="#ff333333"
                android:textSize="18sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_register_phone_input_hint"
                    android:textColor="#ff999999"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    />


            </RelativeLayout>

            <View
                android:layout_width="288dp"
                android:layout_height="1dp"
                android:background="#ffe5e5e5"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/get_verify_code"
            android:layout_width="230dp"
            android:layout_height="36dp"
            android:text="@string/login_get_verify_code"
            android:textColor="#ffffffff"
            android:textSize="17sp"
            android:gravity="center"
            android:background="@drawable/login_shape_rect_gradient_blue_corner"
            android:layout_marginTop="48dp"
            />

    </LinearLayout>


</LinearLayout>