<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/common_colorPrimary">

        <com.frame.component.view.SocialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:toolbar_left_icon="@drawable/common_ic_back"/>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bind_phone"
            android:textColor="@color/common_text_blank_dark"
            android:textSize="24sp"
            android:layout_marginLeft="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="有钱啦？手机换新啦？"
            android:textColor="@color/common_text_blank_dark"
            android:textSize="13sp"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="7dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/login_shape_rect_corner_solid_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_phone_number"
                android:textColor="@color/common_text_blank_dark"
                android:textSize="17sp"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="19dp"
                android:background="@color/common_blue_deep"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone_input_hint"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                style="@style/login_phoneInputStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/login_shape_rect_corner_solid_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_verify_code"
                android:textColor="@color/common_text_blank_dark"
                android:textSize="17sp"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="19dp"
                android:background="@color/common_blue_deep"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                />

            <EditText
                android:id="@+id/verify_code_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_verify_code_input_hint"
                android:textSize="14sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                style="@style/login_verifyCodeInputStyle"/>

            <com.wang.social.login.mvp.ui.widget.CountDownView
                android:id="@+id/get_verify_code_text_view"
                android:layout_width="63dp"
                android:layout_height="22dp"
                android:background="@drawable/login_shape_rect_corner_stroke_blue_deep"
                android:gravity="center"
                android:text="@string/login_get_verify_code"
                android:textColor="@color/common_blue_deep"
                android:textSize="10sp"
                android:layout_marginLeft="14dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/bind_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape_rect_gradient_blue_corner"
            android:layout_marginTop="68dp"
            android:text="@string/login_bind"
            android:textColor="#ffffffff"
            android:textSize="17sp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />

    </LinearLayout>
</LinearLayout>