<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="326dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@drawable/login_shape_rect_corner_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:textColor="#ff333333"
        android:textSize="32sp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone_number"
        android:textColor="#ff434343"
        android:textSize="17sp"
        android:layout_marginTop="38dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="#ff434343"
        android:textSize="17sp"
        android:layout_marginTop="24dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_password_mark"
        android:textColor="#ff999999"
        android:textSize="11sp"
        android:layout_marginTop="12dp"
        android:layout_gravity="right"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_shape_rect_gradient_blue_corner"
        android:layout_marginTop="33dp"
        android:text="@string/login_login"
        android:textColor="#ffffffff"
        android:textSize="17sp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message_login"
        android:textColor="#ff999999"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="39dp">
        <View
            android:layout_width="57dp"
            android:layout_height="1dp"
            android:background="#ffe5e5e5"
            />
        <TextView
            android:layout_width="51dp"
            android:layout_height="10dp"
            android:text="第三方登录"
            android:textColor="#ff999999"
            android:textSize="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <View
            android:layout_width="57dp"
            android:layout_height="1dp"
            android:background="#ffe5e5e5"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_WeChat_ico"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_QQ_ico"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_weibo_ico"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</LinearLayout>